--- a/templates/book_list.html
+++ b/templates/book_list.html
@@ -14,6 +14,7 @@
                 <div class="img">
                     <img src="{{ i.image.url }}" alt="">
                 </div>
+                <p>Автор: {{ i.author }}</p>
                 <span class="date">Дата добавление: {{ i.create_date }} |</span>
                 <span class="date">Дата обновление: {{ i.update_date }}</span>
                 <p>{{ i.description }}</p>
