--- a/templates/book_list.html
+++ b/templates/book_list.html
@@ -8,16 +8,13 @@
   <body>
     <div class="container">
         <ul>
-            {% for i in book %}
+            {% for book in books %}
             <li>
-                <h2>{{ i.title}}</h2>
+                <h2><a href="{{ book.id }}">{{ book.title }}</a></h2>
                 <div class="img">
-                    <img src="{{ i.image.url }}" alt="">
+                    <img src="{{ book.image.url }}" alt="">
                 </div>
-                <p>Автор: {{ i.author }}</p>
-                <span class="date">Дата добавление: {{ i.create_date }} |</span>
-                <span class="date">Дата обновление: {{ i.update_date }}</span>
-                <p>{{ i.description }}</p>
+                <p>Автор: {{ book.author }}</p>
             </li>
             {% endfor %}
         </ul>
