--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Book-detail</title>
-        <link rel="stylesheet" href="..static/css/style.css">
+        <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.css" %}">
     </head>
     <body>
         <div class="container">
